// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Donation Day Default 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Rubik;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-height: auto;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 24px;
  padding: 0 16px;
  min-width: 48px;
  width: auto;
  height: 48px;
  z-index: 1050;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  color: rgba(0, 0, 0, 0.87);
  background-color: #e0e0e0;
  color: #ffffff;
  background-color: #4caf51;
}

.emotion-1::-moz-focus-inner {
  border-style: none;
}

.emotion-1.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-1 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-1:active {
  box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12);
}

.emotion-1:hover {
  background-color: #f5f5f5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: #e0e0e0;
  }
}

.emotion-1.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-1.Mui-disabled {
  color: #7E7E7E;
  box-shadow: none;
  background-color: #dadee0;
}

.emotion-1:hover {
  background-color: rgb(53, 122, 56);
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: #4caf51;
  }
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="donationDate"
        >
          <div
            className="dayString"
          >
            <span
              className="weekday"
            >
              יום ראשון
            </span>
            <span>
              10/12
            </span>
          </div>
          <div
            className="data"
          >
            <span>
              6
               תורים
            </span>
            <span
              className="dataDivider"
            >
              |
            </span>
            <span>
              4
               רשומים
            </span>
          </div>
        </div>
        <div
          className="availableAppointmentsToggle"
        >
          הצג תורים פנויים בלבד
          <div
            className="toggleContainer toggle"
            onClick={[Function]}
          >
            <div
              className="toggleCircle"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="slots"
      >
        <div>
          <div
            className="listHeader"
          >
            <div
              className="time"
            >
              11:00
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer no show"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="no show"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip redChip"
                    >
                      לא הגיע
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="listHeader"
          >
            <div
              className="time"
            >
              13:00
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer completed"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="completed"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip greenChip"
                    >
                      הושלם
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
            <div
              className="dividerContainer"
            >
              <div
                className="divider"
              />
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer bookedAppointment"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="bookedAppointment"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
            <div
              className="dividerContainer"
            >
              <div
                className="divider"
              />
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer cancelled"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="cancelled"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="availableAppointmentText"
                  >
                    תור ריק
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip redChip"
                    >
                      בוטל לאחרונה
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  add-person.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="listHeader"
          >
            <div
              className="time"
            >
              14:30
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer booked"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="booked"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip greenChip"
                    >
                      חדש
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
            <div
              className="dividerContainer"
            >
              <div
                className="divider"
              />
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer availableAppointment"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="availableAppointment"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="availableAppointmentText"
                  >
                    תור ריק
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  add-person.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="emptySpace"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-extended MuiFab-sizeLarge MuiFab-primary makeStyles-fab-32 emotion-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-2"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        className="text"
      >
        הוסף תור
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Screens/Donation Day No Appointments 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Rubik;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-height: auto;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 24px;
  padding: 0 16px;
  min-width: 48px;
  width: auto;
  height: 48px;
  z-index: 1050;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  color: rgba(0, 0, 0, 0.87);
  background-color: #e0e0e0;
  color: #ffffff;
  background-color: #4caf51;
}

.emotion-1::-moz-focus-inner {
  border-style: none;
}

.emotion-1.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-1 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-1:active {
  box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12);
}

.emotion-1:hover {
  background-color: #f5f5f5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: #e0e0e0;
  }
}

.emotion-1.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-1.Mui-disabled {
  color: #7E7E7E;
  box-shadow: none;
  background-color: #dadee0;
}

.emotion-1:hover {
  background-color: rgb(53, 122, 56);
}

@media (hover: none) {
  .emotion-1:hover {
    background-color: #4caf51;
  }
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="donationDate"
        >
          <div
            className="dayString"
          >
            <span
              className="weekday"
            >
              יום ראשון
            </span>
            <span>
              10/12
            </span>
          </div>
          <div
            className="data"
          >
            <span>
              0
               תורים
            </span>
            <span
              className="dataDivider"
            >
              |
            </span>
            <span>
              0
               רשומים
            </span>
          </div>
        </div>
        <div
          className="availableAppointmentsToggle"
        >
          הצג תורים פנויים בלבד
          <div
            className="toggleContainer toggle"
            onClick={[Function]}
          >
            <div
              className="toggleCircle"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="slots"
      >
        <div
          className="noAppointments"
        >
          טרם נקבעו תורים ליום זה
        </div>
        <div
          className="emptySpace"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-extended MuiFab-sizeLarge MuiFab-primary makeStyles-fab-33 emotion-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-2"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        className="text"
      >
        הוסף תור
      </div>
    </button>
  </div>
</div>
`;
